<resources>
    <string name="app_name">ProjectGA</string>
    <string name="edit_test">Enter a test string</string>
    <string name="button_save_test">Save</string>
    <string name="button_load_test">Load</string>
    <string name="login">"Login"</string>
    <string name="forgotPassword">"Forgot Password?"</string>
    <string name="signinGoogle">"Sign In With Google+"</string>
    <string name="mainMenu">Main Menu</string>
    <string name="googleAlzheimer">Google Alzheimer</string>
    <string name="fullName">Full Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Repeat Password</string>
    <string name="signUp">Sign Up</string>
    <string name="contactDetails">Contact Details</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="contactNumber">Phone Number</string>
    <string name="userType">User Type</string>
    <string name="addGuardian"> Add Guardian </string>
    <string name="continueFab">Continue</string>
    <string name="nextFab">Next</string>
    <string name="homeScreen">GA Home</string>
    <string name="addGuardianInfo"> Our users who suffer from Alzheimer\’s can now nominate a Guardian\. A Guardian is someone close to our user\, who cares about his/her health\, whereabouts and wish to protect his/her physical integrity\. </string>
    <string name="privacyInfo"> You can reset your Preferences at anytime in "App Preferences". Click "Go to Preferences" to go change your App Preferences or click cancel to hide this message. </string>
    <string name="mapLabel">Maps</string>
    <string name="galleryLabel">Gallery</string>
    <string name="recognitionLabel">Recognition</string>
    <string name="home">Home</string>
    <string name="profile">My Account</string>
    <string name="backupLabel">Backup</string>
    <string name="locateLabel">Tag &amp; Locate</string>
    <string name="gamesLabel">Games &amp; Puzzles</string>
    <string name="asksecurityquestion"> Security Question </string>
    <string name="secutityquestionanswer"> Enter The Answer </string>
    <string name="forgot_password_msg">Please enter the email Address for us to send your Reset Password Instructions.</string>
    <string name="resetPassword">Reset Password</string>
    <string name="updatePhoto">Update Photo</string>
    <string name="displayName">Display Name</string>
    <string name="aboutLabel">About You</string>
    <string name="guardianLabel">Your Guardian</string>
    <string name="standardLabel">Your Patient</string>
    <string name="tempName">User Name</string>
    <string name="tempEmail">User@Email.com</string>
    <string name="tempDate">12/31/1999</string>
    <string name="tempPhone">(555)555-5555</string>
    <string name="shortDesc">Short Memory</string>
    <string name="importantPeople">Important People</string>
    <string name="longDesc">Long Memory</string>
    <string name="shortDescSpecial">Quick Memory: (10 words)</string>
    <string name="shortDescSpecialError">Exceeded the word limit of 10 words</string>
    <string name="longDescSpecial">Detailed Memory: (50 words)</string>
    <string name="longDescSpecialError">Exceeded the word limit of 50 words</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="photoGallery">Photos and Videos</string>
    <string name="memoryInfo">Memory Information</string>
    <string name="eventName">Name</string>
    <string name="eventDate">Date Taken</string>
    <string name="photo">Photo Name</string>
    <string name="memory">Memory</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="description">Memory:</string>
    <string name="galleryHomeText">You can add people who are important in your life in the Important People category and have then always in your sight\. In photos and videos\, you can label all of your files with name\, date and description\, so you will never forget your memories\.  </string>
    <string name="imageName">Image Name</string>
    <string name="None">None</string>
    <string name="personName">Person Name</string>
    <string name="personRelation">Person Relation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="add_geofences"> Add Geofence</string>
    <string name="remove_geofences"> Remove Geofence</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="createGeoFence">Create Geofence</string>
    <string name="clearGeoFence">Clear Geofence</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="games">Games &amp; Puzzles</string>
    <string name="hobbies">Hobbies</string>
    <string name="radio">Old Time Radio and Shows</string>
    <string name="sudoku">Minimal Sudoku</string>
    <string name="wordSearch">Word Search</string>
    <string name="luminosity">Luminosity</string>
    <string name="quiz">Quiz Logo Game</string>
    <string name="garden">Flower Garden</string>
    <string name="pond">Pocket Pond 2</string>
    <string name="labyrinth">Labyrinth Lite</string>
    <string name="paint">Sketch</string>
    <string name="piano">Magic Piano</string>
    <string name="luminosityDesc">A comprehensive brain training program with 30+ brain games.</string>
    <string name="sudokuDesc">A fun and simple number puzzle game done with a minimalistic style.</string>
    <string name="wordSearchDesc">The same word search puzzles that everyone knows and loves.</string>
    <string name="radioDesc">Easily listen to the best of old time radio and shows.</string>
    <string name="quizDesc">Try to guess each logo from various times and places around the world.</string>
    <string name="gardenDesc">Grow flowers and send them to others.</string>
    <string name="pianoDesc">Play a piano on your phone to various songs.</string>
    <string name="labyrinthDesc">Guide a ball through various mazes to the goal.</string>
    <string name="paintDesc">Simply tap the screen to draw whatever you like.</string>
    <string name="pondDesc">An interactive koi pond where you can feed and take care of fish.</string>
    <string name="luminosityComp">By Lumos Labs, Inc.</string>
    <string name="quizComp">By Lemmings At Work</string>
    <string name="labyrinthComp">By Illusion Labs</string>
    <string name="wordSearchComp">By Wordloco</string>
    <string name="sudokuComp">By Zero Logic Games</string>
    <string name="gardenComp">By Fairy Engine LLC</string>
    <string name="pondComp">By TriggerWave</string>
    <string name="pianoComp">By Smule</string>
    <string name="paintComp">By Sony Mobile Comm.</string>
    <string name="radioComp">By AMSApps</string>
    <string name="mapMarker">Map Marker</string>
    <string name="address">Address</string>
    <string name="addressDesc">Marker Name</string>
    <string name="addressDescSpecial">Marker Description (10 Words Max)</string>
    <string name="chooseIcon">Choose Icon</string>
    <string name="clickMap">Long press anywhere on the map to add Geofence</string>
    <string name="allsetText"> Looks like you are all set.</string>
    <string name="standardUserTextIntro"> You are a Standard User</string>
    <string name="standardUserTextIntro2"> As a Standard User, you are able to:</string>
    <string name="standardUserTextIntro2Info1"> \u2022 Save individual profiles for people who are important to you;\n\n \u2022 Store your personal memories for important people, locations and events;\n\n \u2022 Pinpoint important locations in Google Maps for easy and quick navigation.</string>
    <string name="standardUserTextIntro2Info2"> \u2022 Tag physical objects for easy location via bluetooth; \n\n \u2022 Define a Guardian User, who will be your guardian angel 24 hours a day.</string>
    <string name="guardianUserTextIntro2"> As a Guardian User, you are able to:</string>
    <string name="guardianUserTextIntro2Info"> \u2022 Track Standard Users\’ whereabouts;\n\n \u2022 Set safety zones for Standard Users\’ freedom of movement;\n\n \u2022 Exchange emergency messages with Standard Users. </string>
    <string name="standardUserTextIntroInfo"> You will benefit the most of our app, as it was designed around your needs.</string>
    <string name="guardianUserTextIntro"> You are a Guardian User</string>
    <string name="guardianUserTextIntroInfo"> A person who suffers from Alzheimer\’s disease and who also is a Standard User in our app nominated you as a his\/her guardian.</string>
    <string name="guardianUserScreenText">\u2022Track down Standard Users;\n\n\u2022Define safety zones for the movement of Standard Users;\n\n\u2022Interact with Standard Users on the spot in case of emergencies;\n\n\u2022Be alerted of non-ordinary routines being followed by Standard Users.</string>
    <string name="pref_header_about"> About </string>
    <string name="app_summary"> GAProject app is a Proof of Concept (POC) release. It is not intended for selling or for publication at Google Playstore, but for demonstration purposes only.</string>
    <string name="title_version"> Version Number </string>
    <string name="app_version"> 1.0 </string>
    <string name="title_send_feedback"> Send Feedback </string>
    <string name="summary_support"> Queries? Please reach out to us. We are glad to help 24/7! </string>
    <string name="key_send_feedback"> key_send_feedback </string>
    <string name="pref_title_notifications"> Notifications </string>
    <string name="title_new_notification_sound"> Proactive App check </string>
    <string name="notifications_new_message"> notifications_new_message </string>
    <string name="backup_key">backup_key</string>
    <string name="general_title_label">General</string>
    <string name="restore_key">restore_key</string>
    <string name="restore_summary">Click to restore all pictures from your backup</string>
    <string name="restore">Restore</string>
    <string name="title_new_notifications_sound_summary"> Constantly check whether you are doing okay.</string>
    <string name="title_app_notifications"> App notifications</string>
    <string name="title_app_notifications_summary"> Receive general App level Notifications?</string>
    <string name="title_app_notifications_key"> title_app_notifications_key </string>
</resources>