<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_title_label">

        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/backupLabel"
            android:key="@string/backup_key"/>

        <Preference
            android:title="@string/restore"
            android:summary="@string/restore_summary"
            android:key="@string/restore_key" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/app_summary" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound"
            android:summary="@string/title_new_notifications_sound_summary"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/title_app_notifications_key"
            android:title="@string/title_app_notifications"
            android:summary="@string/title_app_notifications_summary"/>

    </PreferenceCategory>
</PreferenceScreen>