<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/cv" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tile_red"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/recognition_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/None"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="31dp"
                android:layout_toEndOf="@+id/profilePicture"
                android:text="@string/personName"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/personRelation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/personName"
                android:layout_below="@+id/personName"
                android:layout_marginTop="15dp"
                android:text="@string/personRelation"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/shortDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/personRelation"
                android:layout_below="@+id/personRelation"
                android:layout_marginTop="10dp"
                android:text="@string/shortDesc"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/longDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/shortDescription"
                android:layout_below="@+id/shortDescription"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:text="@string/longDesc" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/ic_volume_up_black_24dp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>