<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/importantPeopleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/importantPeople"
        android:textColor="@color/textInputEditTextColor"
        style="@style/textfieldbox"
        android:drawablePadding="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/ic_person_add_green_48dp"
        android:focusable="false"
        android:elevation="8dp"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/galleryButn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/photoGallery"
        android:textColor="@color/textInputEditTextColor"
        style="@style/textfieldbox"
        android:drawablePadding="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusable="false"
        android:elevation="8dp"
        android:drawableStart="@drawable/ic_perm_media_green_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/galleryHomeText"
        android:layout_margin="40dp"
        android:textColor="@color/textViewColor"
        android:textSize="16sp"
        />



</LinearLayout>