<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.group.projectga.fragments.GuardianMapsFragment">

    <TextView
        android:id="@+id/clickMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/clickMap"
        android:visibility="gone"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:textColor="@color/textInputEditTextColor"
        android:paddingTop="300dp"
        />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        fab:fab_expandDirection="down"
        fab:fab_addButtonColorNormal="@color/loginbackground"
        fab:fab_addButtonColorPressed="@color/Map"
        fab:fab_addButtonPlusIconColor="@color/Map"
        fab:fab_addButtonStrokeVisible="false"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="right">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_remove_geofence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/loginbackground"
            fab:fab_colorPressed="@color/loginbackground"
            fab:fab_icon="@drawable/ic_clear_all_yellow_24dp"
            fab:fab_plusIconColor="@color/Map"
            fab:fab_size="mini"
            fab:fab_title="@string/remove_geofences" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_geofence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/loginbackground"
            fab:fab_colorPressed="@color/loginbackground"
            fab:fab_icon="@drawable/ic_add_yellow_24dp"
            fab:fab_plusIconColor="@color/Map"
            fab:fab_size="mini"
            fab:fab_title="@string/add_geofences" />


    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</fragment>

