<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/addGuardian"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="80dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person_add_black_24dp"
                android:background="@color/loginbackground"
                android:padding="15dp"
                android:gravity="start|center"
                android:text="@string/addGuardian"
                android:textSize="24sp"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/textfieldbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailTextEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:background="@color/loginbackground"
                    android:padding="15dp"
                    android:hint="@string/emailAddress"
                    android:inputType="textEmailAddress"
                    tools:ignore="MissingPrefix,UnusedAttribute" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:text="@string/addGuardianInfo"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="60dp"
                    android:paddingTop="15dp"
                    android:text="@string/continueFab"
                    android:textColor="@color/green"
                    android:textSize="20sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/doneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_done_black_24dp"
                    android:translationZ="12dp"
                    app:fabSize="normal" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>